[gd_scene load_steps=5 format=3 uid="uid://dhsh5epsxik0l"]

[ext_resource type="Script" uid="uid://copr0fssm1ptr" path="res://UI/game_over.gd" id="1_jawqf"]
[ext_resource type="AudioStream" uid="uid://dhsemsywvlfnk" path="res://Music/Sad Spongebob original meme sound effect.mp3" id="2_3y5qq"]
[ext_resource type="FontFile" uid="uid://ckjnwdyjcuv2b" path="res://Fonts/PressStart2P-Regular.ttf" id="2_wruqd"]

[sub_resource type="CanvasTexture" id="CanvasTexture_5ua2x"]

[node name="GameOver" type="CanvasLayer"]
script = ExtResource("1_jawqf")

[node name="TextureRect" type="TextureRect" parent="."]
self_modulate = Color(0, 0, 0, 1)
offset_left = -8.0
offset_top = -8.0
offset_right = 1928.0
offset_bottom = 1088.0
texture = SubResource("CanvasTexture_5ua2x")

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.5
offset_top = -29.0
offset_right = 46.5
offset_bottom = 29.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="TextureRect/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.933326, 4.81308e-06, 9.62615e-07, 1)
theme_override_fonts/font = ExtResource("2_wruqd")
theme_override_font_sizes/font_size = 100
text = "GAME-OVER"
horizontal_alignment = 1

[node name="Button" type="Button" parent="TextureRect/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_wruqd")
theme_override_font_sizes/font_size = 40
text = "REINICIAR"

[node name="Button2" type="Button" parent="TextureRect/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_wruqd")
theme_override_font_sizes/font_size = 40
text = "CREDITOS"

[node name="Label2" type="Label" parent="TextureRect/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_wruqd")
theme_override_font_sizes/font_size = 40
text = "PUNTAJE : 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_3y5qq")
volume_db = -20.0
autoplay = true

[connection signal="button_down" from="TextureRect/VBoxContainer/Button" to="." method="_on_button_button_down"]
[connection signal="pressed" from="TextureRect/VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
